--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -8,9 +8,13 @@ en:
       auth_app_disabled: not enabled
       auth_app_enabled: enabled
       authentication_app: Authentication app
+      current_ip: Current IP address
+      current_sign_in: Current sign in time
       dob: Date of birth
       email: Email address
       full_name: Full name
+      last_ip: Last IP address
+      last_sign_in: Last sign in time
       login: Login Information
       password: Password
       phone: Phone number
