--- a/config/locales/instructions/es.yml
+++ b/config/locales/instructions/es.yml
@@ -60,7 +60,7 @@ es:
     personal_key:
       accent: Anótelo o imprímalo.
       info_html: Esta es la única manera de recuperar el acceso a su cuenta si pierde
-        el teléfono donde enviamos su código de seguridad. %{accent}
+        su teléfono o las opciones de seguridad. %{accent}
       once_html: "<strong>Las claves personales son de un solo uso.</strong> Si necesita
         utilizar su clave personal por algún motivo, se le emitirá una nueva clave."
       safety_html: "<strong>Manténgalo privado y seguro.</strong> No comparta su clave
