--- a/config/locales/instructions/fr.yml
+++ b/config/locales/instructions/fr.yml
@@ -63,9 +63,8 @@ fr:
         v: Excellente!
     personal_key:
       accent: Notez-la ou imprimez-la.
-      info_html: Il s'agit de la seule façon de récupérer l'accès à votre compte si
-        vous perdez le téléphone sur lequel nous envoyons votre code de sécurité.
-        %{accent}
+      info_html: C'est le seul moyen de retrouver l'accès à votre compte si vous perdez
+        votre téléphone ou vos options de sécurité. %{accent}
       once_html: "<strong>Les clés personnelles sont à usage unique.</strong> Si vous
         devez utiliser votre clé personnelle pour quelque raison que ce soit, vous
         recevrez une nouvelle clé."
