--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -137,6 +137,7 @@ en:
         - on a phone plan with your name on it
         - not a virtual phone (such as Google Voice or Skype)
         - a U.S. number
+      reset_and_restart_verification: Reset and restart identity verification
       return_to_profile: "‹ Return to your login.gov profile"
       return_to_sp_html: You can now log into <strong>%{sp}</strong>.
       review:
